[package]
name = "dsl_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dsl_project"
path = "src/lib.rs"

[[example]]
name = "client"
path = "example/client.rs"

[[example]]
name = "server"
path = "example/server.rs"

[dependencies]
atoi = "2.0.0"
bytes = "1.6.0"
futures = "0.3.30"
log = "0.4.21"
simplelog = "0.12.2"
tokio = {version = "1", features = ["full"]}
tokio-util = { version = "0.7.11", features = ["codec"]}
tracing = "0.1.40"
